# Decay-clocks

./: .env.example  .gitignore  CITATION.cff  Caddyfile  LICENSE  Makefile  README.md  alembic.ini  deploy.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2a0778657977_initial_production_schema.py  3dfdcc962678_add_cost_config_table.py  4406be7c61e8_add_performance_indexes.py  610b8e789ec2_add_status_changed_at_to_nodes.py  6d7ed09240f0_add_cost_config_id_to_nodes.py  7e46dc721990_add_hazard_mode_and_dominant_axes_to_.py  ba0066be409a_add_dependency_edges.py  bf684f05bb0e_add_environment_column.py
docker/: Dockerfile
docker/compose/: docker-compose.prod.yml  docker-compose.yml
docker/postgres/: init-temporal.sql
docker/prometheus/: prometheus.yml
docs/: architecture.md
scripts/: chaos_flood.py  integration_demo.py  load_test.py  reset_db.py  test_propagation.py
src/worker/: dispatcher.py  run_worker.py  workflows.py
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_config_fidelity.py  test_csd_workflow.py  test_dashboard.py  test_escalation_dispatcher.py  test_metrics.py  test_node_lifecycle.py  test_output_wrapper.py  test_portfolio_pipeline.py  test_scheduler.py  test_temporal_worker.py
tests/unit/: conftest.py  test_calibration.py  test_config_validator.py  test_csd.py  test_csd_warnings.py  test_hazard.py  test_hazard_nonlinear.py  test_node.py  test_portfolio.py  test_portfolio_optimizer.py  test_reliability_dynamics.py  test_reliability_properties.py  test_resilience.py  test_signal_bus.py  (+2 more)
(+28 files in other folders)
