[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "decay-clocks"
version = "0.1.0"
description = "Multi‑axis reliability governance layer with cost‑informed escalation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "redis[hiredis]>=5.2",
    "temporalio>=1.8",
    "pydantic>=2.10",
    "PyYAML>=6.0",
    "httpx>=0.28",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "black>=24.12",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "locust>=2.32",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
